# street-gaussians-ns

./: .gitmodules  LICENSE  README.md  pyproject.toml
scripts/: nvs_template.json
scripts/pythons/: colmap_pts_combine.py  extract_object_pts.py  extract_waymo.py  masks_generate.py  pcd2colmap_points3D.py  run_colmap.py  segs_generate.py  transform2colmap.py
scripts/shells/: data_process.sh  eval.sh  export.sh  masks_generate.sh  object_pts_generate.sh  points_cloud_generate.sh  render.sh  run_colmap.sh  segs_generate.sh  train.sh
street_gaussians_ns/: __init__.py  sgn_config.py  sgn_splatfacto.py  sgn_splatfacto_scene_graph.py
street_gaussians_ns/cameras/: cameras.py
street_gaussians_ns/data/: sgn_datamanager.py  sgn_dataparser.py  sgn_dataset.py
street_gaussians_ns/data/utils/: bbox_optimizers.py  data_utils.py  dynamic_annotation.py  geometric_metric.py
street_gaussians_ns/scripts/: eval.py  exporter.py  render.py
